ISSUE-3176: 1. ACL applied on entire group list 2. loading all group descriptions before paginating only for MEMBERS sorting